--- a/src/scss/tag/_body.scss
+++ b/src/scss/tag/_body.scss
@@ -9,4 +9,10 @@ body{
     overflow-x: hidden;
     font-family: 'Proxima Nova';
     font-size: 16px;
+    // @media (max-width: 1450px){
+    //     width: 1450px;
+    //     >.row{
+    //         overflow: hidden;
+    //     }
+    // }
 }
