--- a/src/scss/blocks/_b-starting.scss
+++ b/src/scss/blocks/_b-starting.scss
@@ -37,7 +37,7 @@
         padding: 20px 28px; 
         text-align: center;
         margin: 0 10px;
-        &.is-active{
+        &.is-active, &:hover{
             border-bottom: 3px solid currentColor;
         }
         &_seller {}
@@ -77,8 +77,29 @@
         margin-left: -1px;
         z-index: 1;
         will-change: color, background-color;
-        
         transition: 500ms ease-out;
+
+        &_1{
+            background-repeat: no-repeat;
+            background-position: right center;
+            background-image: url();
+        }
+
+        &:before{
+            opacity: 0;
+            content: '';
+            position: absolute;
+            left: 15px;
+            top: 15px;
+            background-color: white;
+            width: 30px;
+            height: 30px;
+            @include mask('../../images/triangle.svg');
+            @include mask-size('100% 100%');
+            @include mask-pos(left);
+            @include mask-rep(no-repeat);    
+            transition: inherit;        
+        }
 
 
         @media (max-width: 1440px){
@@ -89,13 +110,25 @@
             font-size: 2em;
             font-weight: 200;
             color: #878787;
+            position: relative;
+            z-index: 2;
         }
 
         &__desc {
             margin-top: 30px;
             font-size: 1.125em;
+            position: relative;
+            z-index: 2;
         }
-
+        &__img{
+            position: absolute;
+            right: 0;
+            z-index: 1;
+            top: 50%;
+            transform: translateY(-50%);
+            transition: inherit;
+            opacity: 0;
+        }
         &:hover{
             z-index: 2;
             transition: 500ms ease-in;
@@ -104,6 +137,12 @@
             color: white;
             span{
                 color: inherit !important;
+            }
+            img{
+                opacity: 1;
+            }
+            &:before{
+                opacity: 1;
             }
         }
     }
