--- a/src/scss/blocks/_b-main.scss
+++ b/src/scss/blocks/_b-main.scss
@@ -11,6 +11,15 @@
         position: relative;
         z-index: 2;
         // position: relative;
+
+        @media (max-width: 1000px){
+            padding-top: 100px;
+            padding-bottom: 200px;
+        }
+        @media (max-width: 700px){
+            padding-top: 85px;
+            padding-bottom: 70px;
+        }
         
         &::before{
             content: '';
@@ -28,11 +37,19 @@
         }
     }
 
-    &__offer {}
+    &__offer {
+        @media (max-width: 700px){
+            br{ display: none; }
+        }
+    }
 
     &__desc {
         margin-top: 45px;
         font-size: 1.5em;
+        @media (max-width: 700px){
+            margin-top: 25px;
+            font-size: 1.2em;
+        }
     }
 
     &__actions {
@@ -42,11 +59,29 @@
         justify-content: space-between;
         margin-top: 95px;
         align-items: center;
+        @media (max-width: 1000px){
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            margin-top: 50px;
+        }
+        @media (max-width: 1000px){
+            margin-top: 35px;
+        }
     }
     &__action{
         &_begin{
             font-weight: 600;
             letter-spacing: 0.05em;
+            @media (max-width: 1000px){
+                margin-bottom: 100px;
+            }
+            @media (max-width: 500px){
+                font-size: 0.75em;
+                width: 100%;
+                text-align: center;
+                margin-bottom: 50px;
+            }
         }
     }
 
