--- a/src/scss/tag/_h.scss
+++ b/src/scss/tag/_h.scss
@@ -11,6 +11,8 @@ h1,
     }
     h1 {
         font-size: 3.05em;
+        @media (max-width: 1000px){ font-size: 2.5em; }
+        @media (max-width: 700px){ font-size: 1.8em; }
     }
     h2 {
         font-size: 2.8em;
