--- a/src/scss/blocks/_b-why.scss
+++ b/src/scss/blocks/_b-why.scss
@@ -9,12 +9,23 @@
     @media (max-width: 1700px){ background-position: calc( 465px - 40vw ) 0; }
     @media (max-width: 1450px){ background-position: calc( 465px - 55vw ) 0; }
     @media (max-width: 1300px){ background-position: calc( 465px - 80vw ) 0; }
+    @media (max-width: 1100px){ 
+        background-position: calc( 100% - 30px ) top;
+        background-size: cover;
+    }
     @media (min-width: 1700px){ background-position: 0 0; }
 
 
     &__cnt {
         padding-top: 100px;
         padding-bottom: 75px;
+        @media (max-width: 1100px){
+            background-color: rgba(255, 255, 255, 0.85);
+        }
+        @media (max-width: 1100px){
+            padding-top: 50px;
+            padding-bottom: 25px;
+        }
     }
 
     &__info {
@@ -25,11 +36,22 @@
         flex-wrap: wrap;
         // padding-left: 20px;
         justify-content: space-between;
+        @media (max-width: 1100px){
+            width: 100%;
+            margin-right: auto;
+        }
+        @media (max-width: 1100px){
+            justify-content: center;
+        }
     }
 
     &__title{
         font-size: 2.8em;
         margin-bottom: 70px;
+        @media (max-width: 700px){ 
+            font-size: 1.8em; 
+            margin-bottom: 35px;
+        }
     }
 
     &__item{
