--- a/src/scss/tag/_h.scss
+++ b/src/scss/tag/_h.scss
@@ -16,9 +16,8 @@ h1,
     }
     h2 {
         font-size: 2.8em;
-        @media (max-width: 900px) {
-            font-size: 2em;
-        }
+        @media (max-width: 900px){ font-size: 2em; }
+        @media (max-width: 700px){ font-size: 1.7em; }
     }
     h3 {
         font-size: 2.3em;
