--- a/src/scss/blocks/_b-why.scss
+++ b/src/scss/blocks/_b-why.scss
@@ -49,8 +49,10 @@
         font-size: 2.8em;
         margin-bottom: 70px;
         @media (max-width: 700px){ 
+            width: 100%;
             font-size: 1.8em; 
             margin-bottom: 35px;
+            text-align: center;
         }
     }
 
