--- a/src/scss/blocks/_b-howto.scss
+++ b/src/scss/blocks/_b-howto.scss
@@ -3,6 +3,11 @@
         padding-top: 110px;
         padding-bottom: 100px;
         flex-direction: column;
+
+        @media ( max-width: 1280px) {
+            padding-top: 70px;
+            padding-bottom: 80px;
+        }
     }
 
     &__title {}
@@ -26,6 +31,12 @@
         position: relative;
 
         // @include showBorder;
+
+        @media ( max-width: 1280px){
+            flex: 19% 0 0;
+            padding: 25px 20px 20px 30px;
+            font-size: 0.9em;
+        }
 
         &__num {
             color: #282828;
