--- a/src/scss/blocks/_b-howto.scss
+++ b/src/scss/blocks/_b-howto.scss
@@ -2,7 +2,7 @@
     &__cnt {
         padding-top: 110px;
         padding-bottom: 100px;
-        flex-direction: column;
+        // flex-direction: column;
 
         @media ( max-width: 1280px) {
             padding-top: 70px;
@@ -10,7 +10,13 @@
         }
     }
 
-    &__title {}
+    &__title {
+        width: 100%;
+        @media (max-width: 700px)
+        {
+            margin-bottom: 25px;
+        }
+    }
 
     &__navbar {
         width: 100%;
@@ -18,6 +24,15 @@
         justify-content: space-between;
         align-items: stretch;
         margin-top: 35px;
+
+        @media (max-width: 700px){
+            // flex-direction: column;
+            // margin-left: -15px;
+            width: 100%;
+            margin-top: 0;
+            align-self: flex-start;
+            flex-wrap: wrap;
+        }
     }
 
     &-nav-link {
@@ -37,18 +52,33 @@
             padding: 25px 20px 20px 30px;
             font-size: 0.9em;
         }
+        @media (max-width: 700px){
+            flex: 33.33% 1 0;
+            padding: 10px;
+            font-size: 0.9em;
+            margin-top: -1px;
+            border: solid 1px $cGrey;
+            margin-left: -1px;
+        }
 
         &__num {
             color: #282828;
             opacity: 0.5;
             font-size: 1.62em;
             font-weight: 200;
+            @media (max-width: 700px){
+                font-size: 1.3em;
+            }
         }
 
         &__text {
             margin-top: 12px;
             font-size: 1.37em;
             font-weight: 300;
+            @media (max-width: 700px){
+                margin-top: 6px;
+                font-size: 1em;
+            }
         }
 
         &.is-active, &:hover {
@@ -83,21 +113,39 @@
 
     &__content {
         margin-top: 55px;
+        @media (max-width: 700px){
+            flex-direction: column;
+            width: 100%;
+            margin-top: 20px;
+            padding-left: 0;
+            padding-right: 0;
+            font-size: 0.9em;
+        }
     }
 
 
     &-cont {
         width: 100%;
         display: flex;
+        flex-wrap: wrap;
         &_map {
             .text {
                 width: 330px;
                 margin-right: 75px;
+                @media (max-width: 1000px){
+                    width: 100%;
+                    padding-top: 0;
+                    margin: 0;
+                }
             }
 
             .map {
                 flex-grow: 1;
                 margin-right: auto;
+                @media (max-width: 1000px){
+                    width: 100%;
+                    margin-top: 1em;
+                }
             }
         }
     }
