--- a/src/scss/tag/_h.scss
+++ b/src/scss/tag/_h.scss
@@ -30,6 +30,7 @@ h1,
     }
     h4 {
         font-size: 1.75em;
+        @media (max-width: 700px){ font-size: 1.2em; }
     }
     h5 {
         font-size: 1.25em;
