--- a/src/scss/tag/_body.scss
+++ b/src/scss/tag/_body.scss
@@ -15,4 +15,7 @@ body{
     //         overflow: hidden;
     //     }
     // }
+    @media (max-width: 780px){
+        padding-bottom: 50px;
+    }
 }
