--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -83,7 +83,7 @@ $cntMaxWidth: 1470px;
 
 .row{
     width: 100%;
-    // overflow-x: hidden;
+    overflow: hidden;
 }
 .container, .cnt{
     width: 100%;
