--- a/src/scss/blocks/_b-howto.scss
+++ b/src/scss/blocks/_b-howto.scss
@@ -127,7 +127,9 @@
     &-cont {
         width: 100%;
         display: flex;
-        flex-wrap: wrap;
+        @media (max-width: 1000px){
+            flex-wrap: wrap;
+        }
         &_map {
             .text {
                 width: 330px;
