--- a/src/scss/blocks/_b-howto.scss
+++ b/src/scss/blocks/_b-howto.scss
@@ -112,7 +112,11 @@
     }
 
     &__content {
+        width: 100%;
         margin-top: 55px;
+        .js-tab-content{
+            width: 100%;
+        }
         @media (max-width: 700px){
             flex-direction: column;
             width: 100%;
