--- a/src/scss/ui/_tab.scss
+++ b/src/scss/ui/_tab.scss
@@ -1,22 +1,14 @@
 .js-tab-content{
-
-    // animation: tab-out 0.25s;
-    // animation-timing-function: ease-out;
-    // animation-delay: 0.25s;
-
-    // display: block;
+    overflow: hidden;
+    // transition: 0.4s ease-out;
     // opacity: 0;
-    transition: 0.25s ease-out;
-    opacity: 0;
-    will-change: opacity;
-    &.is-active{
-        transition: 0.25s ease-in;
-        opacity: 1;
-        // animation: tab-in 0.25s;
-        // animation-timing-function: ease-in;
-        // animation-delay: 0.25s;
-
-        // opacity: 1;
-        // display: block;
-    }
+    // // transform: translateY(30px);
+    // transition-property: opacity;
+    // &.is-active{
+    //     transition-property: opacity;
+    //     transition: 0.4s ease-in;
+    //     transition-delay: 2.4s;
+    //     opacity: 1;
+    //     // transform: translateY(0px);   
+    // }
 }
