--- a/src/scss/blocks/_b-howto.scss
+++ b/src/scss/blocks/_b-howto.scss
@@ -153,6 +153,10 @@
                     margin-top: 1em;
                 }
             }
+            #map{
+                width: 100%;
+                height: 300px;
+            }
         }
     }
 }
