--- a/src/scss/blocks/_b-why.scss
+++ b/src/scss/blocks/_b-why.scss
@@ -6,9 +6,8 @@
     
     
     
-    @media (max-width: 1700px){ background-position: calc( 465px - 40vw ) 0; }
-    @media (max-width: 1450px){ background-position: calc( 465px - 55vw ) 0; }
-    @media (max-width: 1300px){ background-position: calc( 465px - 80vw ) 0; }
+    @media (max-width: 1700px){ background-position: -20vw 0; }
+    @media (max-width: 1300px){ background-position: -40vw 0; }
     @media (max-width: 1100px){ 
         background-position: calc( 100% - 30px ) top;
         background-size: cover;
