--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -41,3 +41,34 @@
     display: none;
   }
 }
+
+@keyframes pulse{
+  0% {
+    // width: 6em;
+    // height: 6em;
+    opacity: 0.3;
+    font-size: 0.4em;
+  }
+  70%{
+    // width: 9.2em;
+    // height: 9.2em;
+    opacity: 1;
+    font-size: 1em;
+  }
+  100%{
+    opacity: 0.3;
+    font-size: 0.4em;
+  }
+}
+
+@keyframes pulse2{
+  0% {
+    opacity: 0.3;
+  }
+  70%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0.3;
+  }
+}
