--- a/src/scss/blocks/_b-nav.scss
+++ b/src/scss/blocks/_b-nav.scss
@@ -3,8 +3,9 @@
     justify-content: center;
     align-items: stretch;
     transform: skewX( $skewX );
+    font-size: 1.1em;
 
-    @media (max-width: 780px){
+    @media (max-width: 860px){
         position: fixed;
         top: 59px;
         left: 0;
@@ -16,6 +17,7 @@
         justify-content: flex-start;
         padding-top: 30px;
         transition: 350ms ease-in-out;
+        z-index: 10;
 
         transform: skewX( 0 ) translateX( - 100% );
 
@@ -32,7 +34,7 @@
         @media (max-width: 1450px){
             padding: 0 20px;
         }
-        @media (max-width: 780px){
+        @media (max-width: 860px){
             transform: skewX( 0 );
             flex-direction: column;
             padding: 0 10px;
@@ -48,15 +50,18 @@
         &:hover, &.is-active{
             color: $cBlue;
             a{
-                border-bottom: solid 4px $cBlue;
-                padding-top: 4px;
+                // border-bottom: solid 4px $cBlue;
+                // padding-top: 4px;
+                &:before{
+                    width: 100%;
+                }
             }
         }
 
         @media (max-width: 1450px){
             padding: 0 12px;
         }
-        @media (max-width: 780px){
+        @media (max-width: 860px){
             padding: 15px;
             height: auto;
         }
@@ -68,7 +73,19 @@
         display: flex;
         align-items: center;
         transition: inherit;
-        @media (max-width: 780px){
+        position: relative;
+
+        &:before{
+            content: '';
+            height: 4px;
+            background-color: $cBlue;
+            width: 0;
+            transition: inherit;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+        @media (max-width: 860px){
             padding-bottom: 7px;
             // height: auto;
         }
