--- a/src/scss/blocks/_b-video.scss
+++ b/src/scss/blocks/_b-video.scss
@@ -3,10 +3,11 @@
       display: flex;
       align-items: center;
     &__desc {
-        @extend .songer;
-        font-size: 0.875em;
-        text-transform: uppercase;
-        font-weight: 600;
+        // @extend .songer;
+        // font-size: 0.875em;
+        // text-transform: uppercase;
+        font-size: 1.1em;
+        font-weight: 500;
         margin-right: 2.5em;
     }
     &__button {
